# unitares

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX_START.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  drift-audit.html  index.html  pyproject.toml  requirements-core.txt  requirements-docker.txt  requirements-full.txt
.github/: dependabot.yml
.github/workflows/: docker-quickstart.yml  documentation-validation.yml  elixir-tests.yml  glossary-pages.yml  publish-sdk.yml  repo-scope.yml  stranded-work.yml  surface-findings.yml  tests.yml
agents/: README.md
agents/chronicler/: agent.py  scrapers.py
agents/common/: dogfood_friction.py  findings.py  resolution_outcome.py
agents/dialectic_reviewer/: __init__.py  __main__.py  reviewer.py
agents/sdk/: LICENSE  README.md  pyproject.toml
agents/sdk/src/unitares_sdk/: __init__.py  _substrate.py  agent.py  client.py  errors.py  models.py  sync_client.py  utils.py
agents/sdk/src/unitares_sdk/lease_plane/: __init__.py  canonical.py  canonicalize.py  client.py  models.py
agents/sdk/tests/: conftest.py  test_agent.py  test_canonical_vectors.py  test_client.py  test_client_connect_resilience.py  test_client_uds.py  test_effect_grant_mint.py  test_governed_file_write.py  test_models.py  test_retry_503.py  test_substrate_emission.py  test_sync_client.py  test_utils.py
agents/sentinel/: agent.py  forced_release_alarm.py  phase_b_promotion.py
agents/vigil/: agent.py
agents/vigil_hygiene/: agent.py
agents/watcher/: _util.py  agent.py  findings.py  floor_state.py  patterns.md
commands/: autopilot.md  checkin.md  closeout.md  diagnose.md  dialectic-respond.md  governance-start.md
config/: governance_config.py  resident_progress.example.json
dashboard/: .gitignore  .prettierignore  README.md  agents.js  dashboard.js  eisv-charts.js  eslint.config.mjs  fleet-metrics.js  fleet-severity.js  index.html  package-lock.json  package.json  phase.js  residents.js  sentinel.js  state.js  styles.css  system-health.js  timeline.js  utils.js  vigil.js  vite.config.js  vitest.config.js  watcher.js
dashboard/redesign/: PLAN.md  app.html  data.js  kit.css  preview.html  snapshot.js  tokens.css  ws.js
dashboard/src/: main.js
dashboard/tests/: agents.test.js  fleet-severity.test.js  state.test.js  utils.test.js
data/: README.md  sequential_calibration_state.bak.epoch1
data/lease_plane/: last_phase_b_verdict.json
data/v7-fhat/: ode_params.json  params.json
db/postgres/: Dockerfile.age-vector  README.md  knowledge_schema.sql  partitions.sql  schema.sql  schema_drift_check.sh
demos/frt_autonomy_sandbagging/: README.md  REAL_LLM_FINDINGS.md  eval_harness.py  model_organism.py  real_llm_probe.py  run_demo.py  run_unitares_demo.py  test_sandbagging.py  test_unitares_integration.py  unitares_integration.py
docs/: CANONICAL_COMPONENTS.md  CHANGELOG.md  EISV_COMPUTATION.md  EVALUATION_INDEX.md  FLAGS.md  PRODUCTION_SNAPSHOT.md  README.md  REPO_SCOPE.md  REVIEWER_GUIDE.md  SCOPE_AND_THREAT_MODEL.md  UNIFIED_ARCHITECTURE.md  surface-taxonomy.md  tonality-metaphor.md  trust-contract.md
docs/assets/: README.md
docs/dev/: CANONICAL_SOURCES.md  CIRCUIT_BREAKER_DIALECTIC.md  DRIFT_LEDGER.md  KNOWLEDGE_GRAPH_SEMANTICS.md  MARKDOWN_PROLIFERATION_POLICY.md  SESSION_KEY_DERIVATION.md
docs/guides/: CIRS_PROTOCOL.md  START_HERE.md  TROUBLESHOOTING.md
docs/handoffs/: 2026-04-29-migration-drift-triage.md  2026-05-03-r1-implementation-handoff.md  2026-05-04-r2-implementation-plan.md
docs/install/: cross-machine-surface.md
docs/integration/: MCP_CLIENTS.md
docs/manual/: 01-overview.md  02-install.md  03-running-the-server.md  04-integrating-agents.md  05-reading-the-signals.md  06-operating.md  07-troubleshooting.md  (+1 more)
governance_core/: __init__.py  adaptive_governor.py  coherence.py  coordination_events_helpers.py  dynamics.py  parameters.py  phase_aware.py  research.py  stability.py  verification.py
scripts/: README.md  calibrate_class_conditional.py  unitares  verdict_counterfactual.py
skills/: SKILLS_MANIFEST.sha256
src/: activity_tracker.py  agent_behavioral_baseline.py  agent_identity_auth.py  agent_lifecycle.py  agent_loop_detection.py  agent_metadata_model.py  agent_metadata_persistence.py  agent_monitor_state.py  agent_process_mgmt.py  agent_profile.py  agent_state.py  agent_storage.py  audit_db.py  audit_log.py  auto_ground_truth.py  background_tasks.py  behavioral_assessment.py  behavioral_state.py  bridge_events.py  broadcaster.py  calibration.py  cohort_prior.py  cohort_prior_source.py  concept_extraction.py  config_manager.py  connection_tracker.py  coordination_events.py  coordination_failure_emit.py  dialectic_db.py  dialectic_protocol.py  drift_telemetry.py  effect_grant.py  eisv_format.py  event_detector.py  gateway_server.py  governance_glossary.py  governance_monitor.py  governance_state.py  hck_reflexive.py  http_api.py  (+52 more)
tests/: conftest.py  test_ablation_negative_controls.py  test_acquire_compat.py  test_action_level_identity.py  test_action_router_description_drift.py  test_activity_tracker.py  test_admin_handlers.py  test_adoption_kpi.py  test_age_sql_fallback.py  test_agent_behavioral_baseline.py  test_agent_experience_envelope.py  test_agent_fragmentation.py  test_agent_identity_auth.py  test_agent_identity_credential.py  test_agent_lifecycle.py  test_agent_loop_enforcement.py  test_agent_metadata.py  test_agent_presence_lease.py  test_agent_profile.py  test_agent_storage.py  test_analysis_tools.py  test_apply_migrations_script.py  test_archival_gaps.py  test_audit_log.py  test_audit_log_tail_scan.py  test_automations_endpoint.py  test_autopilot_closeout.py  test_backfill_calibration_script.py  test_background_tasks_silence.py  test_basin_shadow_compare.py  test_behavioral_sensor.py  test_behavioral_state.py  test_bootstrap_checkin_dao.py  test_bootstrap_checkin_filters_3a.py  test_bootstrap_checkin_filters_3b.py  test_bootstrap_checkin_helper.py  test_bootstrap_only_observability.py  test_bridge_events.py  test_broadcaster_event_shape.py  test_calibration_end_to_end.py  (+365 more)
(+805 files in other folders)
