[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-mcp"
version = "2.13.0"
description = "UNITARES Governance MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    # governance_core (EISV ODE engine) lives in this repo at top-level
    # governance_core/ — pure Python, no separate install needed. The package
    # was previously a separate private compiled wheel (CIRWEL/unitares-core);
    # folded back in 2026-04-24 once IP-protection rationale dissolved.
    # The unitares-core repo remains as an archived historical reference at v2.3.0.
]

[project.optional-dependencies]
full = [
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiofiles>=23.2.1",
    "orjson>=3.9.0",
    "prometheus-client>=0.19.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]
analysis = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "editdistance>=0.6.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "agents"]
pythonpath = [".", "agents/sdk/src"]
addopts = ["-v"]
# Coverage is opt-in: `make test`, `scripts/dev/test-cache.sh`, and CI pass
# `--cov=...` / `--cov-fail-under=25` explicitly. Enabling it in addopts caused
# `pytest --collect-only` to measure ~14% and fail the gate (no tests run).
# HTML: add `--cov-report=html` to a full run when needed (22MB+ per run).
markers = [
    "smoke: Fast smoke tests for pre-push validation (target <60s)",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore:unclosed database:ResourceWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
    # Unawaited-coroutine leak enforcement lives in tests/conftest.py via
    # pytest_warning_recorded + pytest_sessionfinish. filterwarnings cannot
    # catch these because pytest wraps every test in catch_warnings(record=True),
    # which stores warnings in a log and bypasses "error:" promotion.
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/archive/*",
    "*/demos/*",
    "*/scripts/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
