[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-mcp"
version = "2.14.0"
description = "UNITARES Governance MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    # governance_core (EISV ODE engine) lives in this repo at top-level
    # governance_core/ — pure Python, no separate install needed. The package
    # was previously a separate private compiled wheel (CIRWEL/unitares-core);
    # folded back in 2026-04-24 once IP-protection rationale dissolved.
    # The unitares-core repo remains as an archived historical reference at v2.3.0.
]

[project.optional-dependencies]
full = [
    "uvicorn>=0.30.0,<1.0.0",
    "starlette>=0.37.0,<2.0.0",
    "websockets>=12.0,<17.0",
    "psutil>=5.9.0,<8.0.0",
    "aiofiles>=23.2.1,<26.0.0",
    "orjson>=3.9.0,<4.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "redis>=5.0.0,<9.0.0",
    "sentence-transformers>=2.2.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # Ed25519 signing/verification for the Agent Identity Credential (AIC)
    # attestation primitive (src/identity/agent_identity_credential.py). The
    # module guards the import, so the core install does not require it.
    "cryptography>=41.0.0,<50.0.0",
]
dev = [
    "pytest>=7.4.0,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "hypothesis>=6.0.0,<7.0.0",
]
analysis = [
    "scipy>=1.10.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "editdistance>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "agents"]
pythonpath = [".", "agents/sdk/src"]
addopts = ["-v"]
# Coverage is opt-in: `make test`, `scripts/dev/test-cache.sh`, and CI pass
# `--cov=...` / `--cov-fail-under=75` explicitly. Enabling it in addopts caused
# `pytest --collect-only` to measure ~14% and fail the gate (no tests run).
# HTML: add `--cov-report=html` to a full run when needed (22MB+ per run).
markers = [
    "smoke: Fast smoke tests for pre-push validation (target <60s)",
    "integration: Full-stack tests that drive a running governance stack (opt-in; gated on RUN_INTEGRATION_STACK=1, skip cleanly when no stack is up)",
    "chaos: Deterministic failure-injection tests asserting documented degradation contracts (no live services; selectable with -m chaos)",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore:unclosed database:ResourceWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
    # Unawaited-coroutine leak enforcement lives in tests/conftest.py via
    # pytest_warning_recorded + pytest_sessionfinish. filterwarnings cannot
    # catch these because pytest wraps every test in catch_warnings(record=True),
    # which stores warnings in a log and bypasses "error:" promotion.
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/archive/*",
    "*/demos/*",
    "*/scripts/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Dead-code gate: unused imports only, kept at zero by CI.
# F841/F811/ERA cleanups are tracked separately — widen this list as they reach zero.
select = ["F401"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ re-export surfaces
"**/__init__.py" = ["F401"]
# Pytest imports fixtures/plugins that ruff cannot see as used
"tests/**" = ["F401"]
"agents/*/tests/**" = ["F401"]
"agents/sdk/tests/**" = ["F401"]
# Declared re-export facades (docstring-marked); consumers import moved names through them
"src/agent_state.py" = ["F401"]
"src/mcp_handlers/utils.py" = ["F401"]
"src/mcp_handlers/cirs/protocol.py" = ["F401"]
"src/mcp_handlers/lifecycle/handlers.py" = ["F401"]
"src/mcp_handlers/identity/core.py" = ["F401"]
"src/mcp_handlers/identity/handlers.py" = ["F401"]
# Re-export hub for watcher tests/hooks (tests monkeypatch.setattr these names on the agent module)
"agents/watcher/agent.py" = ["F401"]
# Surfaces owned by in-flight PR #619 — clean up after it lands
"src/http_api.py" = ["F401"]
"src/mcp_handlers/tool_stability.py" = ["F401"]
"src/mcp_handlers/consolidated.py" = ["F401"]
