[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitares-sdk"
version = "0.1.0"
description = "Agent SDK for UNITARES governance"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unitares_sdk = ["py.typed"]
